# internet_shop_backend

./: main.py  pyproject.toml
src/data/: parse_data.py
src/database/: associative.py  base.py  db_actions.py  models.py
